--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
+<!--TEST page-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TEST page</title>
 </head>
 <body>
-    <h1>
-        hello world
-    </h1>
+    <h1 tittle="h1태그로 작성되었습니다">hello world!</h1>
+    <hr><p>안녕하세요!<br>지금 보고있는 문서는 테스트 문서입니다.<br>본 문서는 여러가지 태그 시험 사용을 포함하고 있습니다.</p><hr>
+   
+    <h2 tittle="h2태그로 작성되었습니다">사용된 것들_기본</h2>
+    <p> 문단 제목(장, 절, 소제목 등) &lt;h1&gt;,&lt;h2&gt;...&lt;h6&gt;<br>
+        마우스가 올라갈 때 설명문이 출력되는 툴팁 문자열<br>
+        단락을 나누는&lt;p&gt;,&lt;/p&gt;<br>
+        수평선을 긋는&lt;hr&gt;<br>
+        새로운 줄로 넘어가는&lt;br&gt;                                       </p><hr>
+    <h2>문서 꾸미기</h2>
+    <P> 개발자 포멧을 그대로 출력하는 &lt;pre&gt;
+        <pre>
+                                            개 입 그 출 .
+                                            발 력 대 력
+                                            자 한 로 된
+                                            가       다
+        </pre><br>
+        <b>진하게</b>&lt;b&gt;&lt;/b&gt;<br>
+        <strong>중요한</strong>&lt;strong&gt;&lt;/strong&gt;<br>
+        <em>강조</em>&lt;em&gt;&lt;/em&gt;<br>
+        <i>이탤릭으로 강조</i>&lt;i&gt;&lt;/i&gt;<br>
+        <b><i>진하게 이탤릭으로 강조</i></b>&lt;b&gt;&lt;i&gt;&lt;/i&gt;&lt;/b&gt;<br>
+        보통문자보다 <small>한 단계 작은 문자</small>&lt;small&gt;&lt;/small&gt;<br>
+        보통문자의 <sup>윗첨자</sup>&lt;sup&gt;&lt;/sup&gt;, <sub>아랫첨자</sub>&lt;sub&gt;&lt;/sub&gt;  <br>
+        <del>삭제</del>&lt;del&gt;&lt;/del&gt;<br>
+        추가(<ins>밑줄</ins>)&lt;ins&gt;&lt;/ins&gt;<br>
+        <mark>하이라이팅</mark>&lt;mark&gt;&lt;/mark&gt;  <hr>
+    </P>
 </body>
 </html>
