modify name and link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1 tittle="h1태그로 작성되었습니다">hello world!</h1>
-    <hr><p>안녕하세요!<br>지금 보고있는 문서는 테스트 문서입니다.<br>본 문서는 여러가지 태그 시험 사용을 포함하고 있습니다.</p><hr>
+    <hr><p>안녕하세요!<br>지금 보고있는 문서는 테스트 문서입니다.<br>본 문서는 여러가지 태그 시험 사용을 포함하고 있습니다.</p>
+    
+    <hr>
+    <li><a href="cc/cc.html">clone coding page</a></li>
+    <li><a href="login.html">login page</a></li>
+    <hr>
    
     <h2 tittle="h2태그로 작성되었습니다">사용된 것들_기본</h2>
     <p> 문단 제목(장, 절, 소제목 등) &lt;h1&gt;,&lt;h2&gt;...&lt;h6&gt;<br>
